# Indexing-Engine

./: CMakeLists.txt  README.md
benchmarks/: benchmark_all.cpp
include/: bitmap_index.h  bplus_tree_index.h  btree_index.h  chained_hash_index.h  extendible_hash_index.h  index_interface.h  linear_probing_index.h  record.h  rtree_index.h  sorted_array_index.h
results/: benchmark_report.csv  bitmap_idx_results.csv  bplus_tree_results.csv  btree_results.csv  chained_hash_results.csv  extendible_results.csv  linear_probing_results.csv  rtree_results.csv  sorted_array_results.csv
src/: bench_bplus_tree  bench_btree  bitmap_idx  bitmap_index.cpp  bplus_debug.cpp  bplus_tree_index.cpp  btree_index.cpp  chained_hash  chained_hash_index.cpp  extendible  extendible_hash_index.cpp  linear_probing  linear_probing_index.cpp  performance  performance.cpp  rtree  rtree_index.cpp  sorted_array  sorted_array_index.cpp  test
tests/: test_all.cpp
